[tool.poetry]
name = "pyvirgo36"
version = "0.2.1"
description = "A Python package for the Virgo language"
authors = ["Jack Grahl <jack.grahl@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jwg4/pyvirgo"
repository = "https://github.com/jwg4/pyvirgo"
packages = [
    { include = "virgo" },
]

# Dep was pinned from 'ply = ^3.11' to what it is below b/c of this issue:
# https://github.com/mailgun/flanker/issues/168#issuecomment-391235195

[tool.poetry.dependencies]
python = "^3.6"
ply = "3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
hypothesis = "^6.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
